--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -3,18 +3,14 @@ $primary-blue: #177EAA;
 $shade-grey: grey;
 $non-white: #EAEAEA;
 $highlight: #EB813D;
-// $contrast-orange: #ff8103;
 $contrast-orange: #ec7f11;
 
 //Page
 body {
-  // background-color: red;
   width: 100%;
 }
 html {
   background-color: $non-white;
-  // max-width: 100vw;
-  // min-width: 100vw;
 }
 .columns {
   height: 20px;
@@ -23,12 +19,9 @@ html {
 .container {
   width: 100%;
   margin-top: 3%;
-  // margin-bottom: 6%;
 }
 
 .nav {
-  // background-color: red;
-  // float: left;
   position: fixed;
   max-width: 27%;
   margin-top: 2%;
@@ -82,11 +75,9 @@ html {
         color: $non-white;
         margin-left: 4%;
         margin-bottom: 0px;
-        // margin-top: 24px;
         font-family: 'Khula', sans-serif;
         font-weight: 800;
         font-size: 36px;
-        // padding-top: 14px;
       }
       p {
         max-width: 60%;
@@ -161,67 +152,6 @@ html {
           font-weight: 800;
           font-size: 16px;
         }
-        // Start of sliders
-        input[type=range] {
-          float: right;
-          margin-right: 10%;
-          // margin: auto;
-          outline: 1px solid rgba(255, 129, 3, 10);
-          padding: 0;
-          width: 50%;
-          height: 13px;
-          background-color: transparent;
-          background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ff0000), color-stop(100%, #00ff00));
-          background-image: -webkit-linear-gradient(#00ff00, #000022);
-          background-image: -moz-linear-gradient(#473e4f, #51475a);
-          background-image: -o-linear-gradient(#473e4f, #51475a);
-          background-image: linear-gradient($contrast-orange, $contrast-orange);
-          background-size: 50% 100%;
-          background-repeat: no-repeat;
-      /*     border-radius: 5px; */
-          cursor: pointer;
-          -webkit-appearance: none;
-        }
-
-        input[type=range]::-webkit-slider-runnable-track {
-            box-shadow: none;
-            border: none;
-            background: $non-white;
-            -webkit-appearance: none;
-        }
-
-        input[type=range]::-moz-range-track {
-            box-shadow: none;
-            border: none;
-            background: transparent;
-        }
-
-        input[type=range]::-moz-focus-outer {
-            border: 0;
-        }
-
-        input[type=range]::-webkit-slider-thumb {
-            width: 0px;
-            height: 0px;
-            border: 0;
-            background: #fff;
-            border-radius: 100%;
-            box-shadow: 0 0 1px 0px rgba(0,0,0,0.1);
-            -webkit-appearance: none;
-        }
-
-        input[type=range]::-moz-range-thumb {
-            width: 0px;
-            height: 0px;
-            border: 0;
-            background: #fff;
-            border-radius: 100%;
-            box-shadow: 0 0 1px 0px rgba(0,0,0,0.1);
-        }
-        .slider {
-          margin-top: 30px;
-        }
-        // End of slider
       }
       .what {
         h4 {
@@ -250,13 +180,11 @@ html {
         min-width: 1000%;
         polygon {
           fill: #004A8C;
-          // stroke-width: 5px;
           display: inline-block;
         }
       }
     }
     .projectsTitle {
-      // padding-top: 7%;
       float: left;
       margin-left: 4%;
       color: $non-white;
@@ -306,6 +234,7 @@ html {
           margin: 0 auto;
           img {
             max-width: 100%;
+            min-width: 95%;
             height: auto;
           }
         }
@@ -345,12 +274,16 @@ html {
       font-family: 'Khula', sans-serif;
       font-weight: 800;
     }
+
     p {
       max-width: 66%;
       margin-left: 12%;
       font-family: 'Khula', sans-serif;
       color: $non-white;
       display: inline-block;
+    }
+    .contactBlurb {
+      margin-left: 16%;
     }
     .contactShape {
       fill: $non-white;
@@ -366,8 +299,7 @@ html {
         .contactIcon {
           width: 44px;
           height: 44px;
-          // background-color: grey;
-          margin: 0px 0px 10px 16px;
+          margin: 4px auto;
           img {
             width: 100%;
             height: 100%;
@@ -409,4 +341,43 @@ html {
   .nav {
     margin-left: 2%;
   }
+}
+
+.cavity {
+  margin-left: 14%;
+  border: 1px solid $contrast-orange;
+  width: 70%;
+  height: 13px;
+}
+.fill {
+  background-color: $contrast-orange;
+  height: 100%;
+}
+
+.javascript {
+  width: 85%;
+}
+.ruby {
+  width: 70%;
+}
+.css {
+  width: 70%;
+}
+.git {
+  width: 80%;
+}
+.mean {
+  width: 80%;
+}
+.manage {
+  width: 90%;
+}
+.deploy {
+  width: 85%;
+}
+.speaking {
+  width: 90%;
+}
+.contactBlurb {
+  margin-left: 16% !important;
 }
