--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -145,7 +145,7 @@ html {
         p {
           margin-left: 1%;
         }
-        label {
+        span {
           margin-left: 4%;
           color: $non-white;
           font-family: 'Khula', sans-serif;
