--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -211,7 +211,7 @@ html {
               display: inline-block;
               font-family: 'Khula', sans-serif;
               font-weight: 600;
-              width: 33%;
+              width: auto;
               margin-left: 5%;
               ul{
                 li{
