--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ html {
   width: 100%;
   margin-top: 3%; }
 
+.externalLinks {
+  color: grey;
+  text-decoration: none; }
+
+.externalLinks:hover {
+  color: #EAEAEA; }
+
 .nav {
   position: fixed;
   max-width: 27%;
@@ -48,7 +55,8 @@ html {
   font-size: 48px; }
 
 .main {
-  background-color: #177EAA; }
+  background-color: #177EAA;
+  border-radius: 22px; }
   .main .about h4 {
     color: #EAEAEA;
     margin-left: 4%;
@@ -195,7 +203,9 @@ html {
   .main .contacts {
     margin-bottom: 8%;
     min-height: 444px;
-    background-color: #ec7f11; }
+    background-color: #ec7f11;
+    border-bottom-left-radius: 22px;
+    border-bottom-right-radius: 22px; }
     .main .contacts h4 {
       margin-left: 4%;
       color: #EAEAEA;
@@ -226,7 +236,7 @@ html {
             width: 100%;
             height: 100%; }
           .main .contacts .contactGroup .contactOption .contactIcon .emailIcon {
-            margin: 0px 0px 0px -1px; }
+            margin: 0px 0px 0px 0px; }
         .main .contacts .contactGroup .contactOption h6 {
           font-family: 'Khula', sans-serif;
           color: #EAEAEA;
@@ -275,11 +285,14 @@ html {
   margin-left: 14%;
   border: 1px solid #ec7f11;
   width: 70%;
-  height: 13px; }
+  height: 13px;
+  border-radius: 3px; }
 
 .fill {
   background-color: #ec7f11;
-  height: 100%; }
+  height: 100%;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px; }
 
 .javascript {
   width: 85%; }
