--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -247,6 +247,7 @@ html {
             max-width: 100%;
             min-width: 95%;
             height: auto;
+            border-radius: 5px;
           }
         }
         p {
