--- a/css/custom.css
+++ b/css/custom.css
@@ -52,8 +52,14 @@
 .actions p {
   color: white;
   text-align: center;
-  margin-top: 55px;
+  margin-top: 30px;
   font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.actions .contact {
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .actions .btns {
